objects/Green_Latern__c.object
<CustomObject>
    <fields>
        <fullName>Marvel_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marvel Name</label>
        <referenceTo>Black_Panther__c</referenceTo>
        <relationshipLabel>Green Laterns</relationshipLabel>
        <relationshipName>DC_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSN_Number__c</fullName>
        <label>SSN Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Green Latern</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Green Latern Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Green Laterns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>